Rails 5 to Rails 7.0

--- a/app/views/layouts/librails/application.html.erb
+++ b/app/views/layouts/librails/application.html.erb
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>Librails</title>
-  <%= stylesheet_link_tag    "librails/application", media: "all" %>
-  <%= javascript_include_tag "librails/application" %>
   <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+
+  <%= stylesheet_link_tag    "librails/application", media: "all" %>
 </head>
 <body>
 
